manifest/web-shim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot-v3-web-shim
  labels:
    app: discord-bot-v3-web-shim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot-v3-web-shim
  template:
    metadata:
      name: discord-bot-v3-web-shim
      labels:
        app: discord-bot-v3-web-shim
    spec:
      containers:
        - name: discord-bot-v3-web-shim
          image: vatusa/discord-bot-v3-web-shim
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
